--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
-    "server":"nodemon server/server.js"
+    "server": "nodemon server/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free": "^5.3.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
+    "@material-ui/core": "^3.0.3",
+    "axios": "^0.18.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.11.0",
@@ -22,6 +29,18 @@
     "jsonwebtoken": "^8.3.0",
     "moment": "^2.22.2",
     "mongoose": "^5.2.12",
-    "multer": "^1.3.1"
+    "multer": "^1.3.1",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
+    "react-dropzone": "^5.1.0",
+    "react-images": "^0.5.19",
+    "react-moment": "^0.7.9",
+    "react-paypal-express-checkout": "^1.0.4",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-slick": "^0.23.1",
+    "redux": "^4.0.0",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0"
   }
 }
