--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.22.2",
     "mongoose": "^5.2.12",
     "multer": "^1.3.1",
+    "npm": "^6.4.1",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-dropzone": "^5.1.0",
