--- a/client/package.json
+++ b/client/package.json
@@ -30,9 +30,17 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "proxy": {
-    "/api/":{
+    "/api/": {
       "target": "http://localhost:3002"
     }
   }
+
 }
