--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@material-ui/core": "^3.0.3",
     "axios": "^0.18.0",
-    "bcrypt": "^3.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.11.0",
     "concurrently": "^4.0.1",
@@ -28,6 +28,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-formidable": "^1.0.0",
+    "http-proxy-middleware": "^0.19.0",
     "jsonwebtoken": "^8.3.0",
     "moment": "^2.22.2",
     "mongoose": "^5.2.12",
@@ -41,6 +42,7 @@
     "react-paypal-express-checkout": "^1.0.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.0.4",
     "react-slick": "^0.23.1",
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0",
